syntax = "proto3";

package com.cloudbeds.userservice;

option java_multiple_files = true;
option java_package = "com.cloudbeds.userservice.rest";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    }
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;

    repeated CreateAddressRequest addresses = 5;
}

message CreateAddressRequest {
    string addressLine1 = 1;
    string addressLine2 = 2;
    string city = 3;
    string state = 4;
    string zip = 5;
    string country = 6;
}

message CreateUserResponse {
    string id = 1;
}